--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,11 @@
     <version>5.2.22.RELEASE</version>
 </dependency>
 
-
-  
+<dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-content</artifactId>
+    <version>5.2.22.RELEASE</version>
+</dependency>
 
   </dependencies>
 </project>
